<resources>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="device_info_default">Unknown</string>
  <string name="turn_on_radio">Turn on radio</string>
  <string name="turn_off_radio">Turn off radio</string>
  <string name="radioInfo_menu_viewADN">View SIM address book</string>
  <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
  <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
  <string name="radioInfo_menu_getPDP">Get PDP list</string>
  <string name="radioInfo_service_in">In service</string>
  <string name="radioInfo_service_out">Out of service</string>
  <string name="radioInfo_service_emergency">Emergency calls only</string>
  <string name="radioInfo_service_off">Radio off</string>
  <string name="radioInfo_roaming_in">Roaming</string>
  <string name="radioInfo_roaming_not">Not roaming</string>
  <string name="radioInfo_phone_idle">Idle</string>
  <string name="radioInfo_phone_ringing">Ringing</string>
  <string name="radioInfo_phone_offhook">Call in progress</string>
  <string name="radioInfo_data_disconnected">Disconnected</string>
  <string name="radioInfo_data_connecting">Connecting</string>
  <string name="radioInfo_data_connected">Connected</string>
  <string name="radioInfo_data_suspended">Suspended</string>
  <string name="radioInfo_unknown">unknown</string>
  <string name="radioInfo_display_packets">pkts</string>
  <string name="radioInfo_display_bytes">bytes</string>
  <string name="radioInfo_display_dbm">dBm</string>
  <string name="radioInfo_display_asu">asu</string>
  <string name="radioInfo_lac">LAC</string>
  <string name="radioInfo_cid">CID</string>
  <string name="small_font">Small</string>
  <string name="normal_font">Normal</string>
  <string name="large_font">Large</string>
  <string name="huge_font">Huge size</string>
  <string name="font_size_preview_text">This is a text size preview.</string>
  <string name="font_size_save">OK</string>
  <string name="battery_info_status_label">Battery status:</string>
  <string name="battery_info_power_label">Power plug:</string>
  <string name="battery_info_scale_label">Battery scale:</string>
  <string name="battery_info_level_label">Battery level:</string>
  <string name="battery_info_health_label">Battery health:</string>
  <string name="battery_info_technology_label">Battery technology:</string>
  <string name="battery_info_voltage_label">Battery voltage:</string>
  <string name="battery_info_voltage_units">mV</string>
  <string name="battery_info_temperature_label">Battery temperature:</string>
  <string name="battery_info_temperature_units">° C</string>
  <string name="battery_info_uptime">Time since boot:</string>
  <string name="battery_info_status_unknown">Unknown</string>
  <string name="battery_info_status_charging">Charging</string>
  <string name="battery_info_status_charging_ac">(AC)</string>
  <string name="battery_info_status_charging_usb">(USB)</string>
  <string name="battery_info_status_discharging">Discharging</string>
  <string name="battery_info_status_not_charging">Not charging</string>
  <string name="battery_info_status_full">Full</string>
  <string name="battery_info_power_unplugged">Unplugged</string>
  <string name="battery_info_power_ac">AC</string>
  <string name="battery_info_power_usb">USB</string>
  <string name="battery_info_power_ac_usb">AC+USB</string>
  <string name="battery_info_power_unknown">Unknown</string>
  <string name="battery_info_health_unknown">Unknown</string>
  <string name="battery_info_health_good">Good</string>
  <string name="battery_info_health_overheat">Overheat</string>
  <string name="battery_info_health_dead">Dead</string>
  <string name="battery_info_health_over_voltage">Over voltage</string>
  <string name="battery_info_health_unspecified_failure">Unknown error</string>
  <string name="bluetooth">Bluetooth</string>
  <string name="bluetooth_visibility">Discoverable</string>
  <string name="bluetooth_is_discoverable">Discoverable for %1$s seconds…</string>
  <string name="bluetooth_is_discoverable_always">Discoverable</string>
  <string name="bluetooth_not_discoverable">Make device discoverable</string>
  <string name="bluetooth_visibility_timeout">Discoverable timeout</string>
  <string name="bluetooth_visibility_timeout_summary">Set how long device will be discoverable</string>
  <string name="bluetooth_devices">Bluetooth devices</string>
  <string name="bluetooth_device_name">Device name</string>
  <string name="bluetooth_name_not_set">No name set, using account name</string>
  <string name="bluetooth_disconnect_blank">%1$s will be disconnected.</string>
  <string name="bluetooth_connected">Connected</string>
  <string name="bluetooth_disconnected">Disconnected</string>
  <string name="bluetooth_disconnecting">Disconnecting…</string>
  <string name="bluetooth_connecting">Connecting…</string>
  <string name="bluetooth_unknown"/>
  <string name="bluetooth_not_connected">Pair with this device</string>
  <string name="bluetooth_pairing">Pairing…</string>
  <string name="bluetooth_paired">Paired but not connected</string>
  <string name="bluetooth_device">handsfree/headset</string>
  <string name="progress_scanning">Scanning</string>
  <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
  <string name="bluetooth_notif_title">Pairing request</string>
  <string name="bluetooth_notif_message">"Select to pair with "</string>
  <string name="device_picker">Bluetooth device picker</string>
  <string name="bluetooth_permission_request">Bluetooth permission request</string>
  <string name="bluetooth_ask_enablement">An application on your phone is requesting permission to turn on Bluetooth. Do you want to do this?</string>
  <string name="bluetooth_ask_discovery">An application on your phone is requesting permission to turn on Bluetooth and to make your phone discoverable by other devices for %1$d seconds. Do you want to do this?</string>
  <string name="bluetooth_ask_lasting_discovery">An application on your phone is requesting permission to make your phone “always discoverable” by other Bluetooth devices. Do you want to do this?</string>
  <string name="bluetooth_ask_enablement_and_discovery">An application on your phone is requesting permission to turn on Bluetooth and to make your phone discoverable by other devices for %1$d seconds. Do you want to do this?</string>
  <string name="bluetooth_ask_enablement_and_lasting_discovery">An application on your phone is requesting permission to turn on Bluetooth and to make your phone discoverable by other devices. Do you want to do this?</string>
  <string name="bluetooth_turning_on">Turning on Bluetooth…</string>
  <string name="bluetooth_scan_text">Empty button…</string>
  <string name="bluetooth_settings_text">Empty button…</string>
  <string name="bluetooth_enable_text">Empty button…</string>
  <string name="bluetooth_device_info_connectButton_text">Turn on Bluetooth</string>
  <string name="bluetooth_device_info_deviceInfo_text"/>
  <string name="bluetooth_connection_permission_request">Bluetooth connection request</string>
  <string name="bluetooth_connection_notif_message">Touch to connect to \"%1$s\"</string>
  <string name="bluetooth_connection_dialog_text">Do you want to connect to \"%1$s\"?</string>
  <string name="date_and_time">Date &amp; Time</string>
  <string name="choose_timezone">Select time zone</string>
  <string name="default_date_format">MM/dd/yyyy</string>
  <string name="normal_date_format">Normal (%s)</string>
  <string name="display_preview_label">Preview:</string>
  <string name="display_font_size_label">Font size:</string>
  <string name="intent_sender_data_label">Data:</string>
  <string name="intent_sender_sendbroadcast_text">Send broadcast</string>
  <string name="intent_sender_action_label">Action:</string>
  <string name="intent_sender_startactivity_text">Start activity</string>
  <string name="intent_sender_resource_label">Resource:</string>
  <string name="intent_sender_account_label">Account:</string>
  <string name="proxy_clear_text">Clear</string>
  <string name="proxy_port_label">Port</string>
  <string name="proxy_defaultView_text">Restore defaults</string>
  <string name="proxy_action_text">Save</string>
  <string name="proxy_hostname_label">Hostname</string>
  <string name="proxy_error">Attention</string>
  <string name="proxy_error_dismiss">OK</string>
  <string name="proxy_error_invalid_host">The hostname you typed is not valid.</string>
  <string name="proxy_error_empty_port">You must complete the port field.</string>
  <string name="proxy_error_empty_host_set_port">The port field must be empty if the host field is empty.</string>
  <string name="proxy_error_invalid_port">The port you typed is not valid.</string>
  <string name="radio_info_signal_location_label">Location:</string>
  <string name="radio_info_neighboring_location_label">Neighbouring CID:</string>
  <string name="radio_info_data_attempts_label">Data attempts:</string>
  <string name="radio_info_gprs_service_label">GPRS service:</string>
  <string name="radio_info_roaming_label">Roaming:</string>
  <string name="radio_info_imei_label">IMEI:</string>
  <string name="radio_info_call_redirect_label">Call redirect:</string>
  <string name="radio_info_ppp_resets_label">Number of PPP reset since boot:</string>
  <string name="radio_info_gsm_disconnects_label">GSM disconnects:</string>
  <string name="radio_info_current_network_label">Current network:</string>
  <string name="radio_info_data_successes_label">Data successes:</string>
  <string name="radio_info_ppp_received_label">PPP received:</string>
  <string name="radio_info_gsm_service_label">GSM service:</string>
  <string name="radio_info_signal_strength_label">Signal strength:</string>
  <string name="radio_info_call_status_label">Call status:</string>
  <string name="access_control_title">Access Control</string>
  <string name="sound_settings_title">Sound</string>
  <string name="display_settings_title">Display</string>
  <string name="wipe_user_data">Wipe user data</string>
  <string name="wipe_user_data_desc">"This will erase user data from your phone, including:
"</string>
  <string name="wipe_all_data">Wipe all data</string>
  <string name="wipe_all_data_desc">"This will erase user data and:
"</string>
  <string name="location_title">My Location</string>
  <string name="personal_settings_tab">Personal</string>
  <string name="personal_info_category">Personal Information</string>
  <string name="personalization_category">Personalization</string>
  <string name="security_privacy_settings_title">Security &amp; Privacy</string>
  <string name="personal_password_title">Personal Password</string>
  <string name="sync_settings_title">Accounts &amp; Sync</string>
  <string name="wallpaper_settings_title">Wallpaper</string>
  <string name="status_bar_toggle_settings">Toggle</string>
  <string name="camera_key_action_setting_title">MI Button</string>
  <string name="camera_key_action_category_title">Use if camera application is not open</string>
  <string name="camera_key_action_none_title">No action</string>
  <string name="camera_key_action_shortcut_title">Shortcut</string>
  <string name="camera_key_action_toggle_title">Trigger toggle</string>
  <string name="camera_key_action_app_title">Open application</string>
  <string name="camera_key_action_shortcut_home">Back to homescreen</string>
  <string name="camera_key_action_shortcut_screenshot">Capture screenshot</string>
  <string name="camera_key_action_shortcut_search">Search</string>
  <string name="camera_key_action_shortcut_call">Call</string>
  <string name="camera_key_action_shortcut_wake">Lock/Wake device</string>
  <string name="trackball_settings">Trackball</string>
  <string name="launcher_settings_title">Launcher</string>
  <string name="font_size_settings_title">Font</string>
  <string name="customized_theme_title">Themes</string>
</resources>