<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <TextView android:textSize="16.0sp" android:textColor="@*android:color/preference_category_text" android:paddingLeft="20.0dip" android:paddingTop="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wipe_user_data"/>
    <LinearLayout android:orientation="vertical" android:background="@*android:drawable/preference_one_item" android:layout_width="fill_parent" android:layout_height="wrap_content">
      <TextView android:textSize="17.0sp" android:textColor="@*android:color/preference_primary_text" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wipe_user_data_desc"/>
      <Button android:id="@id/wipe_user_data" android:layout_height="wrap_content" android:text="@string/wipe_user_data" style="@*android:style/Widget.Button.Bar"/>
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="@*android:color/preference_category_text" android:id="@id/wipe_all_title" android:paddingLeft="20.0dip" android:paddingTop="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wipe_all_data"/>
    <LinearLayout android:orientation="vertical" android:id="@id/wipe_all_layout" android:background="@*android:drawable/preference_one_item" android:layout_width="fill_parent" android:layout_height="wrap_content">
      <TextView android:textSize="17.0sp" android:textColor="@*android:color/preference_primary_text" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wipe_all_data_desc"/>
      <Button android:id="@id/wipe_all_data" android:layout_height="wrap_content" android:text="@string/wipe_all_data" style="@*android:style/Widget.Button.Bar"/>
    </LinearLayout>
  </LinearLayout>
</ScrollView>
